--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-ecomm-store",
+  "name": "demo-cart-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@stripe/stripe-js": "^1.11.0",
-    "next": "10.0.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "12.0.10",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.7"
   }
 }
